# parallel_sa_project

./: CMakeLists.txt  README.md  build.sh  parallel_sa.cpp  suffix_array.h
